@@ -562,9 +562,11 @@ class Addresses extends Common_functions {
 	 * @param  int $obj_id
 	 * @param  bool $print
 	 *
-	 * @return void
+	 * @return int
 	 */
 	public function remove_address_nat_items ($obj_id = 0, $print = true) {
+		# set found flag for returns
+		$found = 0;
 		# fetch all nats
 		try { $all_nats = $this->Database->getObjectsQuery ("select * from `nat` where `src` like :id or `dst` like :id", array ("id"=>'%"'.$obj_id.'"%')); }
 		catch (Exception $e) {
@@ -590,13 +592,20 @@ class Addresses extends Common_functions {
 			    $src_new = json_encode(array_filter($s));
 			    $dst_new = json_encode(array_filter($d));
 
-			    if($Admin->object_modify ("nat", "edit", "id", array("id"=>$nat->id, "src"=>$src_new, "dst"=>$dst_new))!==false) {
-			    	if($print) {
-				        $this->Result->show("success", "Address removed from NAT", false);
-					}
+			    # update only if diff found
+			    if($s!=$src_new || $d!=$dst_new) {
+			    	$found++;
+
+				    if($Admin->object_modify ("nat", "edit", "id", array("id"=>$nat->id, "src"=>$src_new, "dst"=>$dst_new))!==false) {
+				    	if($print) {
+					        $this->Result->show("success", "Address removed from NAT", false);
+						}
+				    }
 			    }
 			}
 		}
+		# return
+		return $found;
 	}
 
 	/**
